fixes window sizing on mobile

--- a/pages.css
+++ b/pages.css
@@ -291,6 +291,7 @@ a:visited {
 	z-index: -1;
 	opacity: 0;
 	height: 100%;
+	width: 100%;
 }
 
 #vinci-box.shown {
@@ -336,6 +337,7 @@ a:visited {
 	z-index: -1;
 	opacity: 0;
 	height: 100%;
+	width: 100%;
 }
 
 #code-box.shown {
@@ -356,6 +358,8 @@ a:visited {
 	left: 0px;
 	z-index: -1;
 	opacity: 0;
+	height: 100%;
+	width: 100%;
 }
 
 #about-box.shown {
@@ -406,6 +410,8 @@ a:visited {
 	left: 0px;
 	z-index: -1;
 	opacity: 0;
+	height: 100%;
+	width: 100%;
 }
 
 #bredcrumb-box.shown {
